feat: add tiered LMCache backend, archive legacy controllers, and improve GPU storage handling

--- a/archive/lmcache_gemma270m_test_backup.ipynb
+++ b/archive/lmcache_gemma270m_test_backup.ipynb
@@ -231,7 +231,35 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "%time\n",
+        "from huggingface_hub import snapshot_download\n",
+        "import os\n",
+        "\n",
+        "model_id = \"google/gemma-3-270m-it\"\n",
+        "local_dir = \"/content/models/gemma-3-270m-it\"\n",
+        "\n",
+        "if os.path.exists(local_dir):\n",
+        "    print(f\"✓ Model already cached at {local_dir}\")\n",
+        "else:\n",
+        "    print(f\"Downloading {model_id}...\")\n",
+        "    snapshot_download(\n",
+        "        repo_id=model_id,\n",
+        "        local_dir=local_dir,\n",
+        "        local_dir_use_symlinks=False\n",
+        "    )\n",
+        "    print(f\"✓ Downloaded to {local_dir}\")\n",
+        "\n",
+        "# Verify download\n",
+        "!ls -lh {local_dir}"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -581,7 +609,7 @@
         }
       ],
       "source": [
-        "%%time\n",
+        "%time\n",
         "from huggingface_hub import snapshot_download\n",
         "import os\n",
         "\n",
